[package]
name = "byml"
version = "0.1.0"
authors = ["Caleb Smith <macadamiadaze@gmail.com>"]
edition = "2018"


[dependencies]
# binread = "1.0.1"
binread = { path = "/home/nicenenerd/git/binread" }
binwrite = "0.2.1"
byteorder = "1.3.4"
indexmap = "1.4.0"
yaz0 = "0.1.2"

[dev-dependencies]
glob = "0.3.0"