[package]
name = "byml"
description = "Nintendo BYML (binary YAML) library in Rust"
documentation = "https://docs.rs/byml"
readme = "README.md"
keywords = ["Nintendo", "byml", "Zelda", "parsing", "modding"]
categories = ["game-development", "parsing"]
version = "0.1.1"
authors = ["Caleb Smith <macadamiadaze@gmail.com>"]
license = "MIT"
edition = "2018"


[dependencies]
base64 = "0.12.3"
binread = "^1.0.1"
binwrite = "0.2.1"
byteorder = "1.3.4"
indexmap = "1.4.0"
parse_int = "0.4.0"
yaz0 = "0.1.2"

[dev-dependencies]
glob = "0.3.0"